--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nguyễn Hữu Cầu Computer Science</title>
     <link rel="stylesheet" href="style.css"/>
-    <script scr="script.js" defer></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <nav class="navbar">
         <ul>
         <li><a href="#" class="dec" id="serv">Services</a></li>
         <li><a href="#" class="dec" id="cont">Contact</a></li>
-        <li><a href="#" class="dec" id="about">About</a></li>
+        <li><a href="#about" class="dec" id="bout">About</a></li>
         <li><a href="#" class="dec" id="home">Home</a></li>
         <li><a href="#" class="logo">CSNHC</a></li>
         </ul>
     </nav>
-    <div class="wel">
+    <section id="home" class="wel">
         <span class="welcome">CLB Tin Học</span> <br>
         <span class="name">Nguyễn Hữu Cầu</span> <br> 
         <span class="pink">Nơi khởi nguồn đam mê công nghệ</span> <br> <br>
         <p class="inf"> Tham gia cùng chúng tôi để khám phá thế giới công nghệ thông tin, phát triển kỹ năng
             <br>lập trình và kết nối với cộng đồng sinh viên đam mê IT. </p>
-    </div>
+    </section>
     <section class="stat">
         <div class="stat-container">
             <div class="members"><svg class="stat-icon" width="32" height="32" fill="none" stroke="currentColor" viewBox="0 0 24 24" style="--darkreader-inline-stroke: currentColor;" data-darkreader-inline-stroke="">
@@ -37,6 +37,10 @@
                                 </svg><h3>20+</h3><p>Dự Án</p></div>
             <div class="event"><svg class="icon" width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#ff00c3" stroke-width="0.00024000000000000003" style="--darkreader-inline-stroke: var(--darkreader-text-ff00c3, #ff1ac9);" data-darkreader-inline-stroke=""><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path fill-rule="evenodd" clip-rule="evenodd" d="M7 2a1 1 0 0 0-1 1v1.001c-.961.014-1.34.129-1.721.333a2.272 2.272 0 0 0-.945.945C3.116 5.686 3 6.09 3 7.205v10.59c0 1.114.116 1.519.334 1.926.218.407.538.727.945.945.407.218.811.334 1.926.334h11.59c1.114 0 1.519-.116 1.926-.334.407-.218.727-.538.945-.945.218-.407.334-.811.334-1.926V7.205c0-1.115-.116-1.519-.334-1.926a2.272 2.272 0 0 0-.945-.945C19.34 4.13 18.961 4.015 18 4V3a1 1 0 1 0-2 0v1H8V3a1 1 0 0 0-1-1zM5 9v8.795c0 .427.019.694.049.849.012.06.017.074.049.134a.275.275 0 0 0 .124.125c.06.031.073.036.134.048.155.03.422.049.849.049h11.59c.427 0 .694-.019.849-.049a.353.353 0 0 0 .134-.049.275.275 0 0 0 .125-.124.353.353 0 0 0 .048-.134c.03-.155.049-.422.049-.849L19.004 9H5zm8.75 4a.75.75 0 0 0-.75.75v2.5c0 .414.336.75.75.75h2.5a.75.75 0 0 0 .75-.75v-2.5a.75.75 0 0 0-.75-.75h-2.5z" fill="#ff00c3" style="--darkreader-inline-fill: var(--darkreader-background-ff00c3, #cc009c);" data-darkreader-inline-fill=""></path></g></svg><h3>50+</h3><p>Sự kiện</p></div>
         </div>
+    </section>
+    <section id="about" class="about">
+        <h1 id="us">Về Chúng Tôi</h1>
+        <h3 id="slogan">CLB Tin học Nguyễn Hữu Cầu - Nơi hội tụ những tâm hồn đam mê công nghệ </h3>
     </section>
 </body>
 </html>
