--- a/index.html
+++ b/index.html
@@ -19,7 +19,17 @@
         <li><a href="#" class="dec" id="home">Home</a></li>
         <li><a href="#" class="logo">CSNHC</a></li>
         </ul>
-    </nav>
+        <div class="nav-icon" id="menu-icon"><svg class="menu-icon" width="24" height="24" fill="none" stroke="currentColor" viewBox="0 0 24 24" style="--darkreader-inline-stroke: currentColor;" data-darkreader-inline-stroke="">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                                </svg></div></nav>
+        <div class="overlay" id="dropdown-menu">
+            <div class="overlay-content">
+                <a href="#">Home</a>
+                <a href="#about">About</a>
+                <a href="#contact">Contact</a>
+                <a href="#service">Services</a>
+        </div>
+        </div>
     <section id="home" class="wel">
         <span class="welcome">CLB Tin Học</span> <br>
         <span class="name">Nguyễn Hữu Cầu</span> <br> 
@@ -43,7 +53,8 @@
     </section>
     <section id="about" class="about">
         <h1 id="us">Về Chúng Tôi</h1>
-        <h3 id="slogan">CLB Tin học Nguyễn Hữu Cầu - Nơi hội tụ những tâm hồn đam mê công nghệ </h3>
+        <h3 id="slogan">CLB Tin học Nguyễn Hữu Cầu - Nơi hội tụ những tâm hồn đam mê công nghệ </h3> <br>
+        <h3>Why we started?</h3>
     </section>
 </body>
 </html>
