--- a/index.html
+++ b/index.html
@@ -57,57 +57,39 @@
         <h3>Why we started?</h3>
     </section>
 </body>
-<footer> 
-    <div class="container"> 
-        <div class="pb-11 border-b border-white/10"> 
-            <div class="flex flex-col xl:flex-row items-start lg:items-center justify-between gap-8"> 
-                <ul class="flex flex-col sm:flex-row flex-wrap gap-8"> 
-                    <li> 
-                        <a href="/contact" class="flex items-center gap-x-1 hover:text-white transition-colors duration-300"> 
-                            <span>Contact Us</span> 
-                        </a> 
-                    </li> 
-                </ul> 
-            </div> 
-        </div> 
-        <div class="pt-11 pb-16"> 
-            <div class="flex flex-col lg:flex-row lg:items-center gap-8 justify-between"> 
-                <div class="order-2 lg:order-1"> 
-                    <p class="mb-1.5">Copyright © 2025 
-                        <br> All Rights Reserved
-                    </p> 
-                </div> 
-                <div class="order-1 lg:order-2"> 
-                    <ul class="flex flex-col sm:flex-row flex-wrap gap-8"> 
-                        <li> 
-                            <a href="/privacy-policy" class="flex items-center gap-x-1 hover:text-white transition-colors duration-300"> 
-                                <span>Privacy Policy</span> 
-                            </a> 
-                        </li>
-                        <li> 
-                            <a href="/terms-conditions" class="flex items-center gap-x-1 hover:text-white transition-colors duration-300"> 
-                                <span>Terms &amp; Conditions</span> 
-                            </a> 
-                        </li> 
-                    </ul> 
-                </div> 
-                <div class="order-3 lg:order-3"> 
-                    <!--social links--> 
-                    <ul class="text-white flex items-center gap-5"> 
-                        <li> 
-                            <a aria-label="facebook" href="https://www.facebook.com/CLBTinHocNHC" target="_blank" rel="noopener noreferrer nofollow " class="inline-block hover:text-primary transition-colors duration-300 text-[22px]"> 
-                                <span class="sr-only">facebook</span> 
-                                <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" class="inline-block" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z">
-                                    </path>
-                                </svg> 
-                            </a> 
-                        </li>
-                    </ul> 
-                </div> 
-            </div> 
-        </div> 
-    </div> 
+<footer>
+    <div id="container">
+        <div>
+            <p>
+                "Copyright © 2025"
+            </p>
+            <p>
+                All Rights Reserved
+            </p>
+        </div>
+        <div>
+            <p>
+                <a>
+                    Privacy Policy
+                </a>
+            </p>
+            <p>
+                <a>
+                    Terms & Conditions
+                </a>
+            </p>
+        </div>
+        <div>
+            <li> 
+                <a aria-label="facebook" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer nofollow " class="inline-block hover:text-primary transition-colors duration-300 text-[22px]"> 
+                    <span class="sr-only">facebook</span> 
+                    <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" class="inline-block" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"></path>
+                    </svg> 
+                </a> 
+            </li>
+        </div>
+    </div>
 </footer>
 
 </html>
