--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </body>
 <footer>
     <div id="container">
-        <div>
+        <div class="order">
             <p>
                 "Copyright © 2025"
             </p>
@@ -67,7 +67,7 @@
                 All Rights Reserved
             </p>
         </div>
-        <div>
+        <div class="order">
             <p>
                 <a>
                     Privacy Policy
@@ -79,7 +79,7 @@
                 </a>
             </p>
         </div>
-        <div>
+        <div class="order">
             <li> 
                 <a aria-label="facebook" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer nofollow " class="inline-block hover:text-primary transition-colors duration-300 text-[22px]"> 
                     <span class="sr-only">facebook</span> 
