--- a/index.html
+++ b/index.html
@@ -51,45 +51,27 @@
             <div class="event"><svg class="icon" width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#ff00c3" stroke-width="0.00024000000000000003" style="--darkreader-inline-stroke: var(--darkreader-text-ff00c3, #ff1ac9);" data-darkreader-inline-stroke=""><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path fill-rule="evenodd" clip-rule="evenodd" d="M7 2a1 1 0 0 0-1 1v1.001c-.961.014-1.34.129-1.721.333a2.272 2.272 0 0 0-.945.945C3.116 5.686 3 6.09 3 7.205v10.59c0 1.114.116 1.519.334 1.926.218.407.538.727.945.945.407.218.811.334 1.926.334h11.59c1.114 0 1.519-.116 1.926-.334.407-.218.727-.538.945-.945.218-.407.334-.811.334-1.926V7.205c0-1.115-.116-1.519-.334-1.926a2.272 2.272 0 0 0-.945-.945C19.34 4.13 18.961 4.015 18 4V3a1 1 0 1 0-2 0v1H8V3a1 1 0 0 0-1-1zM5 9v8.795c0 .427.019.694.049.849.012.06.017.074.049.134a.275.275 0 0 0 .124.125c.06.031.073.036.134.048.155.03.422.049.849.049h11.59c.427 0 .694-.019.849-.049a.353.353 0 0 0 .134-.049.275.275 0 0 0 .125-.124.353.353 0 0 0 .048-.134c.03-.155.049-.422.049-.849L19.004 9H5zm8.75 4a.75.75 0 0 0-.75.75v2.5c0 .414.336.75.75.75h2.5a.75.75 0 0 0 .75-.75v-2.5a.75.75 0 0 0-.75-.75h-2.5z" fill="#ff00c3" style="--darkreader-inline-fill: var(--darkreader-background-ff00c3, #cc009c);" data-darkreader-inline-fill=""></path></g></svg><h3>50+</h3><p>Sự kiện</p></div>
         </div>
     </section>
-    <section id="about" class="about">
-        <h1 id="us">Về Chúng Tôi</h1>
-        <h3 id="slogan">CLB Tin học Nguyễn Hữu Cầu - Nơi hội tụ những tâm hồn đam mê công nghệ </h3> <br>
-        <h3>Why we started?</h3>
+    <section id="about">
+        <h1 id="us" class="effect">Về Chúng Tôi</h1>
+        <h3 id="slogan" class="effect">CLB Tin học Nguyễn Hữu Cầu - Nơi hội tụ những tâm hồn đam mê công nghệ </h3> <br>
+        <div class="effect">
+            <h3 id="wes" >Why we started?</h3>
+            <p id="wes-info">
+            CLB được thành lập nhằm khơi dậy niềm đam mê công nghệ, <br>
+            đơn giản hoá những vấn đề phức tạp, và tạo nên một cộng đồng <br>
+            hỗ trợ nhau trong học tập. Đây là nơi các bạn trẻ cùng nhau <br>
+            học hỏi, chia sẻ và phát triển, biến công nghệ thành cầu nối <br>
+            gắn kết và cơ hội cho tương lai.</p> <br>
+        </div>
+        <div class="effect">
+            <h3 id="value"> Giá Trị Cốt Lõi </h3>
+            <p id="value-info">
+                <span id="tick1">✓</span> Học tập: Không ngừng cập nhật kiến thức công nghệ mới <br> <br>
+                <span id="tick2">✓</span> Chia sẻ: Chia sẻ kinh nghiệm và hỗ trợ lẫn nhau <br> <br>
+                <span id="tick3">✓</span> Sáng tạo: Khuyến khích tư duy sáng tạo và đổi mới <br> <br>
+                <span id="tick4">✓</span> Đoàn kết: Xây dựng tinh thần đồng đội mạnh mẽ
+            </p>
+        </div>
     </section>
 </body>
-<footer>
-    <div id="container">
-        <div class="order">
-            <p>
-                "Copyright © 2025"
-            </p>
-            <p>
-                All Rights Reserved
-            </p>
-        </div>
-        <div class="order">
-            <p>
-                <a>
-                    Privacy Policy
-                </a>
-            </p>
-            <p>
-                <a>
-                    Terms & Conditions
-                </a>
-            </p>
-        </div>
-        <div class="order">
-            <li> 
-                <a aria-label="facebook" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer nofollow " class="inline-block hover:text-primary transition-colors duration-300 text-[22px]"> 
-                    <span class="sr-only">facebook</span> 
-                    <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" class="inline-block" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256C0 376 82.7 476.8 194.2 504.5V334.2H141.4V256h52.8V222.3c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287V510.1C413.8 494.8 512 386.9 512 256h0z"></path>
-                    </svg> 
-                </a> 
-            </li>
-        </div>
-    </div>
-</footer>
-
 </html>
